--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "rename-images": "node src/utils/renameImages.js"
   },
   "keywords": [],
   "author": "Nikhil Pareeshwad",
@@ -17,8 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.1.11",
-    "pg": "^8.16.3"
+    "path": "^0.12.7",
+    "pg": "^8.16.3",
+    "sharp": "^0.34.5"
   }
 }
