--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "nodemon": "^3.1.11",
     "path": "^0.12.7",
     "pg": "^8.16.3",
+    "react-router-dom": "^7.11.0",
+    "redis": "^5.10.0",
     "sharp": "^0.34.5"
   }
 }
