--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "fast-levenshtein": "^3.0.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.1.11",
